magically passing all SecurityManager tests on jdk18+